Bug 483823 - New event button does not use currently selected date as default
Summary: New event button does not use currently selected date as default
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-17 11:45 UTC by Kishore Gopalakrishnan
Modified: 2024-03-27 14:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2024-03-17 11:45:20 UTC
SUMMARY
When you create a new event from the toolbar button, it uses today's date by default rather than the currently selected one.

STEPS TO REPRODUCE:
1. In the month-view date picker on the right (not the main view), click on a date other than today's date
2. Click the 'new event' button in the toolbar
3. Cancel event creation
4. Right-click on a date other than today's date in the calendar, and click 'new event'

OBSERVED RESULTS
In step 2, the opened event creation dialog has today's date populated as the default one, rather than the date the user had selected before clicking the toolbar button.

On the other hand, step 4 behaves correctly, in that it sets the default event date as the date the user had selected.

EXPECTED RESULTS
In step 2, the default date for the new event creation should be the date the user had selected.

SOFTWARE/OS VERSIONS
korganizer 6.0.0 (24.02.0)
Operating System: Arch Linux 
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.9-arch1-1 (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
The current behaviour is frustrating for me, because I seem to have developed the habit of selecting a date and pressing Ctrl+N, which always defaults to the current date.
Comment 1 mobile.harvey 2024-03-23 18:31:20 UTC
Just tried to duplicate this on Neon but korganiser crashes when I execute step 2! Bug report raised.

If I can get past step 2 I'll report back.
Comment 2 Bug Janitor Service 2024-03-26 19:46:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/99
Comment 3 Daniel Vrátil 2024-03-27 14:34:59 UTC
Git commit 7267eaeb9acfbe35f562ae4ad3be64313c85a2e1 by Daniel Vrátil.
Committed on 27/03/2024 at 14:03.
Pushed by dvratil into branch 'release/24.02'.

Don't overwrite valid date in eventDurationHint()

The view's hint function is called whenever a new event/todo/journal
is being created from KOrganizer. When the new incidence is being
created via context menu in the side-pane calendar preview, the selected
date might be different from the date currently selected in the main
view. In such case, the view should only provide a hint (e.g. about
duration or allday-ness of the new event) but shouldn't replace the
valid dates.
FIXED-IN: 24.02.2

M  +9    -0    src/agenda/agendaview.cpp
M  +9    -0    src/month/monthview.cpp
M  +19   -4    src/timeline/timelineview.cpp

https://invent.kde.org/pim/eventviews/-/commit/7267eaeb9acfbe35f562ae4ad3be64313c85a2e1